--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "yzf-template",
-  "version": "0.1.0",
-  "private": true,
+  "name": "yzfwork1111",
+  "version": "0.1.2",
+  "description": "工作常用组件",
+  "main": "lib/yzfwork.umd.min.js",
+  "keyword": "yzf-template yzf template",
+  "private": false,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name yzfwork --dest lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "yzfwork": "^0.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
