--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yzfwork",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "工作常用组件",
   "main": "lib/yzfwork.umd.min.js",
   "keyword": "yzf-template yzf template",
@@ -12,6 +12,7 @@
     "lib": "vue-cli-service build --target lib --name yzfwork --dest lib packages/index.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
     "less": "^3.10.3",
