--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yzfwork",
-  "version": "0.1.20",
+  "version": "0.1.21",
   "description": "工作常用组件",
   "main": "lib/yzfwork.umd.min.js",
   "keyword": "yzf-template yzf template",
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
+    "highlight.js": "^9.16.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
@@ -30,6 +31,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "style-resources-loader": "^1.3.2",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
