--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yzfwork",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "description": "工作常用组件",
   "main": "lib/yzfwork.umd.min.js",
   "keyword": "yzf-template yzf template",
@@ -20,6 +20,7 @@
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-html5-editor": "^1.1.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
     "yzfwork": "^0.1.7"
