--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cnpm": "^6.1.1",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
     "highlight.js": "^9.16.2",
+    "install": "^0.13.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
+    "style-resources-loader": "^1.3.3",
     "vue": "^2.6.10",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-html5-editor": "^1.1.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -29,11 +33,15 @@
     "@vue/cli-plugin-eslint": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
     "babel-eslint": "^10.0.1",
+    "compression-webpack-plugin": "^3.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "style-resources-loader": "^1.3.2",
+    "script-ext-html-webpack-plugin": "^2.1.4",
+    "style-resources-loader": "^1.3.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.5.2"
   },
   "eslintConfig": {
     "root": true,
